# resmon

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTEXT.md  Historical Indain Dam Data.rar  README.md  Replan.md  Replan.md.tmp.25376.d8b893092159  Taskfile.yml  check_db.py  check_users.py  drop_version.py  findings.md  main.py  pyproject.toml  remediation-todos.md  requirements.md  start.bat  todos.md
.github/workflows/: ci.yml
api/: pyproject.toml
api/src/api/: __init__.py  db.py  gee_tiles.py  main.py  repositories.py  routes.py  schemas.py
core/: pyproject.toml
core/src/core/: __init__.py  config.py
core/src/core/db/: session.py
core/src/core/models/: __init__.py  abt.py  base.py  capacity_history.py  catchment_forcing.py  forecast_forcing.py  ground_truth.py  ground_truth_match.py  model_version.py  observation.py  pipeline_run.py  prediction.py  rating_curve.py  release_risk.py  reservoir.py
core/src/core/schemas/: __init__.py  abt.py  forecast_forcing.py  observation.py
data/backfill/: aoi_gobind_sagar.geojson  aoi_pong.geojson  aoi_thein.geojson  area_series_gobind_sagar.csv  area_series_pong.csv  area_series_thein.csv
data/historical/: reservoir_timeseries.csv
data/recon/: scene_inventory_gobind_sagar.csv  scene_inventory_pong.csv  scene_inventory_thein.csv
db/: alembic.ini  pyproject.toml
db/migrations/: env.py
db/migrations/versions/: 35175aee5c62_observation_water_mask_geom_overlay_.py  7c4e9a1d2b6f_abt_current_ordering_and_truncate_guards.py  9f1a2b3c4d5e_add_fk_query_indexes.py  a2b4c6d8e0f1_add_reservoir_updated_at_trigger.py  cb96ab2f3b5e_full_schema_reservoir_expand_gt_matches_.py  cca4d3c1ee50_baseline_schema_reservoir_contract_.py
db/src/db/: __init__.py
docs/adr/: 0001-release-risk-is-a-layer-not-a-validated-classifier.md  0002-normal-storage-as-rule-curve-proxy.md  0003-frozen-pipeline-contracts.md  0004-blended-rating-curve-dem-empirical.md  0005-closed-loop-no-live-ground-truth.md  0006-forecaster-pooled-delta-fill-conformal.md  0007-water-extraction-harness.md
docs/contracts/: observation-and-abt.md
docs/plans/: 00-master-implementation-plan.md  01-infrastructure-platform.md  02-database-data-model.md  03-remote-sensing.md  04-data-engineering.md  05-ai-ml.md  06-backend-api.md  07-frontend.md  08-replan-proposal-pinn.md
docs/recon/: backfill-analysis-2026-07-03.md  scene-inventory-2026-07-03.md
docs/runbooks/: dashboard-smoke.md  local-bringup.md
docs/superpowers/plans/: 2026-06-30-frontend-analyst-console.md  2026-07-03-fullscreen-map-dashboard.md  2026-07-04-map-layers.md
docs/superpowers/specs/: 2026-06-16-unified-reservoir-dataset-design.md  2026-06-30-frontend-analyst-console-design.md  2026-07-03-fullscreen-map-dashboard-design.md  2026-07-04-map-layers-design.md
infra/compose/: docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
infra/docker/: mlflow.Dockerfile  python.Dockerfile
infra/docker/postgres/init/: 01-init.sh  01-init.sql  02-dev-repair-privileges.sql
infra/docker/proxy/: Caddyfile
orchestration/: pyproject.toml
orchestration/src/orchestration/: __init__.py  pipeline.py
pipelines/: build_unified_dataset.py
pipelines/_common/: pyproject.toml
pipelines/_common/src/pipelines_common/: __init__.py  dataaccess.py
pipelines/data_engineering/: pyproject.toml
pipelines/data_engineering/src/data_engineering/: __init__.py  build_abt.py  cleaning.py  forcing.py  fusion.py  ingest.py  openmeteo_forcing.py  pipeline.py  reservoirs.py  seed.py  stub_observations.py  validation.py
pipelines/ml/: pyproject.toml
pipelines/ml/src/ml/: __init__.py  autoresearch.py  baselines.py  curve.py  episodes.py  estimation.py  forecaster.py  forecasting.py  gate.py  groundtruthing.py  release.py  release_risk.py
pipelines/remote_sensing/: pyproject.toml
pipelines/remote_sensing/src/remote_sensing/: __init__.py  aoi.py  area.py  backfill.py  calibrate.py  extractors.py  gee_client.py  gee_real.py  harness.py  pipeline.py
research/: current_level_candidate.py  program.md
scripts/: autoresearch_current_estimate.py  backfill_extraction.py  bootstrap.py  load_backfill.py  populate_geometry.py  refresh_estimation_after_imagery.py  scene_inventory.py
tests/: conftest.py
tests/contract/: test_contract_parity.py
tests/integration/: conftest.py  test_api.py  test_de_pipeline.py  test_forecasting.py  test_full_pipeline.py  test_groundtruthing.py  test_load_backfill.py  test_release.py  test_rs_pipeline.py  test_schema_constraints.py
tests/unit/: test_autoresearch.py  test_config_and_health.py  test_dataaccess.py  test_de_abt.py  test_de_cleaning.py  test_de_forcing.py  test_gee_tiles.py  test_ml_curve_gate.py  test_ml_forecaster.py  test_ml_release.py  test_rs_extractors.py
web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
web/src/components/: ForecastChart.tsx  ReservoirButton.tsx  ReservoirMap.tsx  Sidebar.tsx  TrendChart.tsx
web/src/components/stage/: AreaMeter.tsx  CatchmentLayer.tsx  DashboardView.tsx  LayerChips.tsx  MapView.tsx  SarTileLayer.tsx  TimelineDock.tsx  WaterExtentLayer.tsx
web/src/lib/: api.ts  extentVisibility.test.ts  extentVisibility.ts  motion.ts  queries.ts  store.test.ts  store.ts
web/src/styles/: tokens.css
