[project]
name = "reservoir-analytics"
version = "0.1.0"
description = "Reservoir Monitoring & Analytics Platform — workspace root"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "core",
    "db",
    "pipelines-common",
    "remote-sensing",
    "data-engineering",
    "ml",
    "orchestration",
    "api",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["core", "db", "pipelines/*", "orchestration", "api"]

[tool.uv.sources]
core = { workspace = true }
db = { workspace = true }
pipelines-common = { workspace = true }
remote-sensing = { workspace = true }
data-engineering = { workspace = true }
ml = { workspace = true }
orchestration = { workspace = true }
api = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-cov",
    "httpx>=0.27",
]

# ---- Tooling config (applies to all workspace members) ----

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["pipelines/build_unified_dataset.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses these call results as argument defaults by design.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
exclude = ["build/", "dist/", "pipelines/build_unified_dataset\\.py"]

[tool.pytest.ini_options]
testpaths = ["tests", "core", "pipelines", "api"]
python_files = ["test_*.py"]
addopts = "-q"
# Repo root on sys.path so tests can import top-level `scripts/*.py` (e.g.
# tests/integration/test_load_backfill.py -> scripts.load_backfill), the same way
# `uv run python scripts/foo.py` already resolves it from cwd.
pythonpath = ["."]
