[project]
name = "api"
version = "0.1.0"
description = "FastAPI serving layer (health seed now; endpoints land P6)"
requires-python = ">=3.13"
dependencies = [
    "core",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
