[project]
name = "core"
version = "0.1.0"
description = "Shared config, SQLAlchemy models, Pydantic schemas, logging"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2",
    "geoalchemy2>=0.15",
    "psycopg[binary]>=3.2",
    "pydantic>=2",
    "pydantic-settings>=2",
    "structlog>=24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]
