[project]
name = "db"
version = "0.1.0"
description = "Alembic migrations and database bootstrap"
requires-python = ">=3.13"
dependencies = [
    "core",
    "alembic>=1.13",
    "sqlalchemy>=2",
    "geoalchemy2>=0.15",
    "psycopg[binary]>=3.2",
]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db"]
