[project]
name = "orchestration"
version = "0.1.0"
description = "Prefect flows + deployments (Prefect dep added when flows land, P1+)"
requires-python = ">=3.13"
dependencies = ["core", "data-engineering", "remote-sensing", "ml"]

[tool.uv.sources]
core = { workspace = true }
data-engineering = { workspace = true }
remote-sensing = { workspace = true }
ml = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration"]
