[project]
name = "data-engineering"
version = "0.1.0"
description = "Data-engineering pipeline (bulletins + forcing → ABT)"
requires-python = ">=3.13"
dependencies = ["core", "pipelines-common", "pandas>=2.2", "pandera>=0.20"]

[tool.uv.sources]
core = { workspace = true }
pipelines-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_engineering"]
