[project]
name = "ml"
version = "0.1.0"
description = "AI/ML pipeline (rating curve, forecaster, release-risk)"
requires-python = ">=3.13"
dependencies = ["core", "pipelines-common"]

[tool.uv.sources]
core = { workspace = true }
pipelines-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml"]
